--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     },
     "devDependencies": {
         "@types/bootstrap": "^4.3.1",
-        "axios": "^0.19",
+        "axios": "^0.21.1",
         "bootstrap": "^4.4.1",
         "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^4.0.7",
+        "laravel-mix": "latest",
         "lodash": "^4.17.13",
         "popper.js": "^1.16.1",
-        "resolve-url-loader": "^2.3.1",
+        "resolve-url-loader": "^3.1.2",
         "sass": "^1.26.3",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
